# ml-proj-sample

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
kube/mlflow/: deployment.yaml  ingress.yaml  service.yaml
