[project]
name = "emotions-classification"
version = "0.1.0"
description = "Classification model to classify social media comments undeer post by emotions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.12.0",
    "codespell>=2.4.1",
    "dvc>=3.65.0",
    "dvc-s3>=3.2.2",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "mlflow[mlserver]>=3.8.0",
    "pre-commit>=4.5.1",
    "pre-commit-hooks>=6.0.0",
]
